test/inference/good/coreml_polymorphic_type_annotations.mle
type 'a t = {x : 'a}
let ['a] (f : 'a t -> 'a) = ['a] fun (r : 'a t) -> r[] .x