test/inference/bad/typeclass_use_rw.mle
class RW 'a { read : unit -> 'a; write : 'a -> unit }
let [ RW 'a ] (r : unit) = write['a] (read['a] ())